.metadata/.plugins/org.eclipse.cdt.ui/BckupSRAM_Standby.build.log
19:14:02 **** Incremental Build of configuration Debug for project BckupSRAM_Standby ****
make all 
Building file: ../Src/main.c
Invoking: MCU GCC Compiler
C:\C_Workspace\BckupSRAM_Standby\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DUSE_HAL_DRIVER -DSTM32L476xx -I"C:/C_Workspace/BckupSRAM_Standby/Inc" -I"C:/C_Workspace/BckupSRAM_Standby/Drivers/STM32L4xx_HAL_Driver/Inc" -I"C:/C_Workspace/BckupSRAM_Standby/Drivers/STM32L4xx_HAL_Driver/Inc/Legacy" -I"C:/C_Workspace/BckupSRAM_Standby/Drivers/CMSIS/Device/ST/STM32L4xx/Include" -I"C:/C_Workspace/BckupSRAM_Standby/Drivers/CMSIS/Include"  -Og -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/main.d" -MT"Src/main.o" -o "Src/main.o" "../Src/main.c"
../Src/main.c: In function 'main':
../Src/main.c:54:2: warning: implicit declaration of function '__HAL_RCC_BKPSRAM_CLK_ENABLE'; did you mean '__HAL_RCC_OPAMP_CLK_ENABLE'? [-Wimplicit-function-declaration]
  __HAL_RCC_BKPSRAM_CLK_ENABLE();
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
  __HAL_RCC_OPAMP_CLK_ENABLE
../Src/main.c:56:2: warning: implicit declaration of function '__HALL_RCC_PWR_CLK_ENABLE'; did you mean '__HAL_RCC_PWR_CLK_ENABLE'? [-Wimplicit-function-declaration]
  __HALL_RCC_PWR_CLK_ENABLE();
  ^~~~~~~~~~~~~~~~~~~~~~~~~
  __HAL_RCC_PWR_CLK_ENABLE
../Src/main.c:61:32: error: 'BKPSRAM_BASE' undeclared (first use in this function); did you mean 'SRAM_BASE'?
  pBackupSRAMbase = (uint32_t*) BKPSRAM_BASE;
                                ^~~~~~~~~~~~
                                SRAM_BASE
../Src/main.c:61:32: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:63:32: error: 'write_buf' undeclared (first use in this function); did you mean 'write_buff'?
  for(uint32_t i= 0; i < strlen(write_buf)+1; i++){
                                ^~~~~~~~~
                                write_buff
../Src/main.c:64:5: error: 'pBackupSRAMBase' undeclared (first use in this function); did you mean 'pBackupSRAMbase'?
   *(pBackupSRAMBase+i) = write_buf[i]_
     ^~~~~~~~~~~~~~~
     pBackupSRAMbase
../Src/main.c:64:38: error: expected ';' before '_'
   *(pBackupSRAMBase+i) = write_buf[i]_
                                      ^
Src/subdir.mk:30: recipe for target 'Src/main.o' failed
make: *** [Src/main.o] Error 1

19:14:03 Build Finished (took 856ms)

